--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
   <link type="text/css" href="http://localhost:5000/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <body >
+  <div ui-view="log"></div>
   <div ui-view="root1"></div>
   <div ui-view="root2"></div>
 </body>
