feat(log): autoscroll to bottom when the logs extend

--- a/views/game/lobby.html
+++ b/views/game/lobby.html
@@ -1,6 +1,6 @@
 <div class="row span12">
-  <textarea readonly ng-model="chatLog" scroll-glue style="width:45%; height: 250px; font-size: 10;margin-left:20px"></textarea>
-  <textarea readonly ng-model="gameLog"style="width:45%; font-size: 10;height:250px"></textarea>
+  <textarea readonly ng-model="chatLog" scroll-glue style="width:45%; height: 250px; font-size: 10;margin-left:20px" autoscrollbottom></textarea>
+  <textarea readonly ng-model="gameLog"style="width:45%; font-size: 10;height:250px" autoscrollbottom></textarea>
 </div>
 <div>
   <form ng-submit="chat()">
