--- a/public/html/game/partials/characters.html
+++ b/public/html/game/partials/characters.html
@@ -16,8 +16,8 @@
         <td>{{char.name}} </td>
         <td>{{char.rank}} </td>
         <td>
-          <button ng-hide="discardTurn" ng-click="choose(char)" class="btn btn-primary">Choose</button>
-          <button ng-show="discardTurn && !newRound" ng-click="discard(char)" class="btn btn-warning">Discard</button>
+          <button ng-hide="discardTurn" ng-click="choose(char)" class="btn btn-primary btn-sm">Choose</button>
+          <button ng-show="discardTurn && !newRound" ng-click="discard(char)" class="btn btn-warning btn-sm">Discard</button>
         </td>
       </tr>
     </table>
