--- a/public/html/game/partials/warlord.html
+++ b/public/html/game/partials/warlord.html
@@ -19,7 +19,7 @@
           <button ng-show="game.onTurn && game.Warlord &&
                            game.gold >= (card.cost-1) &&
                            player.nickname != game.bishopNickname &&
-                           player.ownedDistricts.length < 8" ng-click="destroy(player, card)" class="btn btn-danger">Destroy</button>
+                           player.ownedDistricts.length < 8" ng-click="destroy(player, card)" class="btn btn-danger btn-sm">Destroy</button>
         </td>
       </tr>
     </table>
