--- a/public/html/game/partials/log.html
+++ b/public/html/game/partials/log.html
@@ -1,6 +1,6 @@
 <div class="row span12">
   <textarea readonly ng-model="chatLog" style="width:45%; height: 250px; font-size: 10;margin-left:20px" autoscrollbottom></textarea>
-  <textarea readonly ng-model="game.gameLog" style="width:45%; font-size: 10;height:250px" autoscrollbottom></textarea>
+  <textarea readonly ng-model="game.gameLog" style="width:45%; font-size: 12px;height:250px;" autoscrollbottom></textarea>
 </div>
 <div>
   <form ng-submit="chat()">
