--- a/public/html/game/partials/basic_actions.html
+++ b/public/html/game/partials/basic_actions.html
@@ -1,17 +1,19 @@
 <div ng-hide="game.buildTurn || !game.onTurn">
-  <button ng-click="takeTwoGold()" ng-hide="hideTwoGold" class="btn btn-primary">Take two golds</button>
-  <button ng-click="drawTwoCards()" ng-hide="chooseOne" class="btn btn-success">Draw two cards, then take one</button>
-  <table class="table" style="width: 300px" ng-show="chooseOne">
+  <div ng-hide="hideBasicActions">
+    <button ng-click="takeTwoGold()"  class="btn btn-primary">Take two golds</button>
+    <button ng-click="drawTwoCards()" class="btn btn-success">Draw two cards, then take one</button>
+  </div>
+  <table class="table" style="width: 300px" ng-show="chooseNumber > 0">
     <tr>
       <th>Name </th>
       <th>Type </th>
       <th>Cost </th>
     </tr>
-    <tr ng-repeat="card in chooseDiscardCards" >
+    <tr ng-repeat="card in drawCards" >
       <td>{{card.name}} </td>
       <td>{{card.type}} </td>
       <td>{{card.cost}} </td>
-      <td><button ng-click="chooseOneCard(card)" class="btn btn-primary btn-sm"> Choose </button> </td>
+      <td><button ng-click="choose(card)" class="btn btn-primary btn-sm"> Choose </button> </td>
     </tr>
   </table>
 </div>
