feat(deck): add Laboratory

--- a/public/html/game/partials/basic_actions.html
+++ b/public/html/game/partials/basic_actions.html
@@ -1,7 +1,7 @@
 <div ng-hide="game.buildTurn || !game.onTurn">
   <div ng-hide="hideBasicActions">
     <button ng-click="takeTwoGold()"  class="btn btn-primary">Take two golds</button>
-    <button ng-click="drawTwoCards()" class="btn btn-success">Draw two cards, then take one</button>
+    <button ng-click="drawTwoCards()" class="btn btn-success">Draw two cards</button>
   </div>
   <table class="table" style="width: 300px" ng-show="chooseNumber > 0">
     <tr>
