--- a/public/html/game/partials/player.html
+++ b/public/html/game/partials/player.html
@@ -10,6 +10,9 @@
       <td>{{card.name}} </td>
       <td>{{card.type}} </td>
       <td>{{card.cost}} </td>
+      <td>
+        <button ng-show="Laboratory && card.name == 'Laboratory'" ng-click="useLaboratory()" class="btn btn-primary btn-sm"> Use Ability </button>
+      </td>
     </tr>
   </table>
   <h3>Gold {{game.gold}}</h3>
@@ -26,6 +29,9 @@
       <td>{{card.cost}} </td>
       <td>
         <button ng-hide="card.cost > game.gold || game.buildCap == 0 || !game.buildTurn" ng-click="build(card);" class="btn btn-primary btn-sm"> Build </button>
+      </td>
+      <td>
+        <button ng-show="LaboratoryOn" ng-click="discardLab(card)" class="btn btn-primary btn-sm"> Discard </button>
       </td>
     </tr>
   </table>
