fix(game): clarify the rule
now the murdered character cannot not use any abilities
once in a turn, a player can choose to collect income from his districts

--- a/public/html/game/partials/basic_actions.html
+++ b/public/html/game/partials/basic_actions.html
@@ -1,7 +1,10 @@
-<div ng-hide="game.buildTurn || !game.onTurn">
+<div ng-show="game.onTurn" class="container">
+  <button ng-click="collectIncome()" ng-disabled="game.income == 0 || collected" class="btn btn-warning">Collect {{game.income}} gold</button>
+</div>
+<div ng-hide="game.buildTurn || !game.onTurn" class="container">
   <div ng-hide="hideBasicActions">
-    <button ng-click="takeTwoGold()"  class="btn btn-primary">Take two golds</button>
-    <button ng-click="drawTwoCards()" class="btn btn-success">Draw two cards</button>
+    <button ng-click="takeTwoGold()"  class="btn btn-warning">Take two golds</button>
+    <button ng-click="drawTwoCards()" class="btn btn-info">Draw two cards</button>
   </div>
   <table class="table" style="width: 300px" ng-show="chooseNumber > 0">
     <tr>
